# FlowWatcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Feature_and_capability_defination.md  LICENSE  MyOwn_thinking.md  OpenSource_Repo_Setup.md  Project_Development_Overview.md  Project_Development_Roadmap.md  Project_Overview.md  README.md  ROADMAP.md  Strategic_shift.md  UI_UX_Plan.md  commitlint.config.js  index.html  package-lock.json  run.bat  skills-lock.json
.agent/workflows/: phase-documentation.md  resume-development.md
.agents/workflows/: add-language.md  audit-deferred.md  commit.md  pr.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
apps/desktop/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  state.rs  tray.rs
apps/desktop/src/components/: AppShell.tsx  CountdownDialog.tsx  ExclusionList.tsx  InlineSelect.tsx  ProcessList.tsx  Sparkline.tsx  SpeedCard.tsx  ThemeProvider.tsx  ToastNotification.tsx  TriggerBuilder.tsx
apps/desktop/src/hooks/: useCountdown.ts  useTauri.ts
apps/desktop/src/lib/: format.ts
apps/desktop/src/locales/: en.json
apps/desktop/src/pages/: index.tsx
apps/desktop/src/stores/: monitoringStore.ts  processStore.ts  settingsStore.ts
apps/desktop/src/types/: index.ts
core/: Cargo.toml
core/actions/: Cargo.toml
core/actions/src/: lib.rs
core/conditions/: Cargo.toml
core/conditions/src/: lib.rs  threshold.rs
core/engine/: Cargo.toml
core/engine/src/: lib.rs  logger.rs  scheduler.rs  speed.rs
core/platform/: Cargo.toml
core/platform/src/: actions.rs  lib.rs  network.rs  process.rs
core/triggers/: Cargo.toml
core/triggers/src/: lib.rs  process.rs
docs/: TRANSLATION_GUIDE.md
docs/phases/: Phase_0_Completion.md  Phase_10_Completion.md  Phase_11_Completion.md  Phase_12_Completion.md  Phase_13_Completion.md  Phase_14_Completion.md  Phase_15_Completion.md  Phase_1_Completion.md  Phase_2_Completion.md  Phase_3_Completion.md  Phase_4_Completion.md  Phase_5_Completion.md  Phase_6_Completion.md  Phase_7_Completion.md  Phase_8_Completion.md  Phase_9_Completion.md  README.md
