[package]
name = "flowwatcher-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowwatcher-platform = { path = "../platform" }
flowwatcher-triggers = { path = "../triggers" }
flowwatcher-conditions = { path = "../conditions" }
flowwatcher-actions = { path = "../actions" }
tokio = { version = "1", features = ["rt", "time", "sync"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "time", "sync", "macros", "test-util"] }
