[package]
name = "flowwatcher-triggers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flowwatcher-platform = { path = "../platform" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

