[package]
name = "flowwatcher-desktop"
version = "0.1.0"
description = "FlowWatcher — Intelligent Network Activity Monitor & Automated System Controller"
authors = ["FlowWatcher Contributors"]
license = "MIT"
repository = "https://github.com/IamAshrafee/FlowWatcher"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

# Core FlowWatcher engine crates (pure Rust, no Tauri dependency)
flowwatcher-engine = { path = "../../../core/engine" }
flowwatcher-triggers = { path = "../../../core/triggers" }
flowwatcher-actions = { path = "../../../core/actions" }
flowwatcher-conditions = { path = "../../../core/conditions" }
flowwatcher-platform = { path = "../../../core/platform" }

